force-app/main/default/objects/ADM_Goal__c/ADM_Goal__c.object-meta.xml
<CustomObject>
    <label>Program Goal</label>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>