force-app/main/default/objects/ADM_Goal__c/fields/Current_Measurements__c.field-meta.xml
<CustomField>
    <fullName>Current_Measurements__c</fullName>
    <inlineHelpText>What is the current status of this goal of achived vs. what we want to achieve?</inlineHelpText>
    <label>Current Measurements</label>
    <type>TextArea</type>
</CustomField>