force-app/main/default/objects/ADM_Goal__c/fields/Description_255__c.field-meta.xml
<CustomField>
    <fullName>Description_255__c</fullName>
    <inlineHelpText>Short description of this goal</inlineHelpText>
    <label>Description (255)</label>
    <type>TextArea</type>
</CustomField>