force-app/main/default/objects/ADM_Goal__c/fields/How_will_it_be_measured__c.field-meta.xml
<CustomField>
    <fullName>How_will_it_be_measured__c</fullName>
    <label>How will it be measured?</label>
    <type>TextArea</type>
</CustomField>