force-app/main/default/objects/ADM_Goal__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Program Goals</relationshipLabel>
    <relationshipName>Program_Goals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>