force-app/main/default/objects/ADM_Goal__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Theme</label>
    <referenceTo>ADM_Theme__c</referenceTo>
    <relationshipLabel>Program Goals</relationshipLabel>
    <relationshipName>Program_Goals</relationshipName>
    <type>Lookup</type>
</CustomField>